# TrCharAny

./: .gitignore  README.md  pyproject.toml  run.bat  todo.md  trcharany.spec
tests/: test_deasciifier_service.py
trcharany/: __init__.py  __main__.py  app.py  config.py  win_console.py  win_shell.py
trcharany/automation/: __init__.py  clipboard_pipeline.py
trcharany/input/: __init__.py  hotkey_listener.py
trcharany/services/: __init__.py  deasciifier_service.py
trcharany/ui/: __init__.py  tray.py
